# chart-drawer

./: CMakeLists.txt  ChartDrawer.h  DataExtractor.h  IOCContainer.h  README.md  mainwindow.cpp  mainwindow.h
test files/: data1.csv  data1.json  data2.csv  data2.json  data3.csv  data3.json
